fix metadata for crate publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ repository = "https://github.com/MagicTheGathering/mtg-sdk-rust"
 license-file = "LICENSE"
 description = "API bindings for www.magicthegathering.io"
 readme = "README.md"
-keywords = ["mtg", "magic", "gathering", "magic the gathering", "magic-the-gathering", "api"]
+keywords = ["mtg", "magic", "gathering", "magic-the-gathering", "api"]
 categories = ["api-bindings"]
 
 [dependencies]
